# berdicles

./: Cargo.toml  README.md
examples/: billboard.rs  fire.rs  grass.rs  layering.rs  oneshot.rs  particle.rs  particle2.rs  particle_ref.rs  spiral.rs  stress.rs  sub_particles.rs  trails.rs  trails_exp.rs
examples/util/: mod.rs
src/: billboard.rs  buffer.rs  despawn.rs  extract.rs  lib.rs  material.rs  noop.rs  pipeline.rs  ring_buffer.rs  shader.rs  shader.wgsl  sub.rs  trail.rs  trail_vertex.wgsl  util.rs
src/templates/: mod.rs  trails.rs
