[package]
name = "berdicles"
version = "0.0.2"
edition = "2021"

authors = ["Mincong Lu <mintlux667@gmail.com>"]
license = "MIT OR Apache-2.0"

readme = "README.md"
repository = "https://github.com/mintlu8/berdicles"
description = """
Expressive CPU particle system for the bevy engine.
"""
keywords = ["bevy", "particle", "particles"]

[dependencies]
bevy = { version = "0.14.0-rc.3", default-features = false, features = ["bevy_pbr"] }
bytemuck = "1.16.1"
const_format = "0.2.32"
fastrand = "2.1.0"

[dev-dependencies]
bevy = { version = "0.14.0-rc.3" }
