[package]
name = "berdicles"
version = "0.2.0"
edition = "2021"

authors = ["Mincong Lu <mintlux667@gmail.com>"]
license = "MIT OR Apache-2.0"

readme = "README.md"
repository = "https://github.com/mintlu8/berdicles"
description = """
Expressive CPU particle system for the bevy engine.
"""
keywords = ["bevy", "particle", "particles"]

[dependencies]
bevy = { version = "0.15.0", default-features = false, features = ["bevy_pbr"] }
bevy_image = { version = "0.15.0" }
bitflags = "2.6.0"
bytemuck = "1.16.1"
fastrand = "2.1.0"

[dev-dependencies]
bevy = { version = "0.15.0" }
noise = "0.9.0"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
